<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SensoresArduino</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_prueaba">prueaba</string>
    <string name="temperatura">Temperatura</string>
    <string name="humedad">Humedad</string>
    <string name="altitud">Altitud</string>
    <string name="ruido">Ruido</string>
    <string name="luminosidad">Luminosidad</string>
    <string name="presion">Presión</string>
    <string name="led">Led</string>
    <string name="conectar">Conectar</string>
    <string name="permisoAceptado">Permiso aceptado</string>
    <string name="permisoDenegado">Permiso Denegado</string>
    <string name="noPosibleConect">No se ha podido conectar con el dispositivo USB</string>
    <string name="protocolo">Protocolo</string>
    <string name="nombre">nombre</string>
    <string name="dispositvoUSBNoDetec">Dispositvo USB no detectado</string>
    <string name="enviado">Enviado</string>
    <string name="lineaFinal">Encontrada final de linea</string>
    <string name="inicializar">iniciaizar</string>
    <string name="addSensor">Añadir sensor</string>
    <string name="title_activity_add_sensor">AddSensorActiv</string>
    <string name="nuevo_sensor_str">Nuevo sensor</string>
    <string name="nombre_str">Nombre: </string>
    <string name="identificador_str">Identificador: </string>
    <string name="unidades_str">Unidades: </string>
    <string name="temperatura_str">Temperatura</string>
    <string name="add_str">Añadir</string>
    <string name="delete_str">Borrar</string>
    <string name="vview_description_str">Ver descripción</string>
    <string name="title_activity_description">DescriptionActiv</string>
    <string name="sensor_name_str">Nombre del sensor: </string>
    <string name="nombre_sensor_str">Nombre del sensor: </string>
    <string name="not_found_str">Sensor no encontrado</string>
    <string name="update_str">Actualizar</string>
    <string name="periodo_str">Periodo de muestreo (ms)</string>
    <string name="export_str">Exportar datos</string>
    <string name="exported_str">Los datos se han exportado correctamente</string>
    <string name="imported_str">Archivo importado correctamente</string>
    <string name="import_str">Importar datos</string>

</resources>
